Removed 'feature' for the i18n coverage

--- a/results/fragments/tests.html
+++ b/results/fragments/tests.html
@@ -569,7 +569,7 @@
     </table>
   </section>
   <section>
-    <h2 id="sec-internationalization-features-data">Internationalization Features</h2>
+    <h2 id="sec-internationalization-data">Internationalization</h2>
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
