--- a/results/fragments/results.html
+++ b/results/fragments/results.html
@@ -349,7 +349,7 @@
     </table>
   </section>
   <section>
-    <h3 id="sec-internationalization-features-results">Internationalization Features</h3>
+    <h3 id="sec-internationalization-results">Internationalization</h3>
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
@@ -886,7 +886,7 @@
     </table>
   </section>
   <section>
-    <h3 id="sec-internationalization-features-results">Internationalization Features</h3>
+    <h3 id="sec-internationalization-results">Internationalization</h3>
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
