--- a/results/fragments/results.html
+++ b/results/fragments/results.html
@@ -26,7 +26,7 @@
         </td>
         <td class="fail">fail</td>
         <td class="fail">fail</td>
-        <td class="fail">fail</td>
+        <td class="pass">pass</td>
       </tr>
       <tr>
         <td id="confreq-rs-epub3-xhtml-results">
@@ -34,7 +34,7 @@
         </td>
         <td class="fail">fail</td>
         <td class="pass">pass</td>
-        <td class="fail">fail</td>
+        <td class="pass">pass</td>
       </tr>
       <tr>
         <td id="confreq-rs-css-embed-inc-results">
@@ -533,7 +533,7 @@
         <td class="fail">fail</td>
         <td class="fail">fail</td>
         <td class="fail">fail</td>
-        <td class="fail">fail</td>
+        <td class="pass">pass</td>
       </tr>
       <tr>
         <td id="confreq-rs-epub3-xhtml-results-detailed">
@@ -543,7 +543,7 @@
         <td class="pass">pass</td>
         <td class="fail">fail</td>
         <td class="pass">pass</td>
-        <td class="fail">fail</td>
+        <td class="pass">pass</td>
       </tr>
       <tr>
         <td id="confreq-rs-css-embed-inc-results-detailed">
