Made necessary change to get the URL-s changed

--- a/docs/drafts/fragments/tests.html
+++ b/docs/drafts/fragments/tests.html
@@ -25,7 +25,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-mathml-rs-behavior-results">❐</a>
+          <a href="results.html#confreq-mathml-rs-behavior-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -36,7 +36,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-rs-epub3-svg-results">❐</a>
+          <a href="results.html#confreq-rs-epub3-svg-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -47,7 +47,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-rs-epub3-xhtml-results">❐</a>
+          <a href="results.html#confreq-rs-epub3-xhtml-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -58,7 +58,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-rs-css-embed-inc-results">❐</a>
+          <a href="results.html#confreq-rs-css-embed-inc-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -69,7 +69,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-rs-css-embed-ref-results">❐</a>
+          <a href="results.html#confreq-rs-css-embed-ref-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -80,7 +80,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#confreq-svg-rs-embed-results">❐</a>
+          <a href="results.html#confreq-svg-rs-embed-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -91,7 +91,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#find-the-package-001-results">❐</a>
+          <a href="results.html#find-the-package-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -102,7 +102,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#find-the-package-002-results">❐</a>
+          <a href="results.html#find-the-package-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -113,7 +113,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#fxl-viewport-crop-001-results">❐</a>
+          <a href="results.html#fxl-viewport-crop-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -124,7 +124,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#item-iri-001-results">❐</a>
+          <a href="results.html#item-iri-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -135,7 +135,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#linear-reachable-001-results">❐</a>
+          <a href="results.html#linear-reachable-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -146,7 +146,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#manifest-fallback-001-results">❐</a>
+          <a href="results.html#manifest-fallback-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -157,7 +157,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#manifest-fallback-002-results">❐</a>
+          <a href="results.html#manifest-fallback-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -168,7 +168,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#manifest-fallback-003-results">❐</a>
+          <a href="results.html#manifest-fallback-003-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -179,7 +179,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#manifest-fallback-004-results">❐</a>
+          <a href="results.html#manifest-fallback-004-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -190,7 +190,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#manifest-fallback-005-results">❐</a>
+          <a href="results.html#manifest-fallback-005-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -201,7 +201,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#navigation-access-001-results">❐</a>
+          <a href="results.html#navigation-access-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -212,7 +212,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#navigation-access-002-results">❐</a>
+          <a href="results.html#navigation-access-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -223,7 +223,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#navigation-link-001-results">❐</a>
+          <a href="results.html#navigation-link-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -234,7 +234,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#navigation-link-002-results">❐</a>
+          <a href="results.html#navigation-link-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -245,7 +245,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-creator-order-001-results">❐</a>
+          <a href="results.html#package-creator-order-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -256,7 +256,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-ignore-unknown-meta-001-results">❐</a>
+          <a href="results.html#package-ignore-unknown-meta-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -267,7 +267,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-title-display-001-results">❐</a>
+          <a href="results.html#package-title-display-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -278,7 +278,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-unlisted-resources-001-results">❐</a>
+          <a href="results.html#package-unlisted-resources-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -289,7 +289,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-version-000-results">❐</a>
+          <a href="results.html#package-version-000-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -300,7 +300,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-whitespace-001-results">❐</a>
+          <a href="results.html#package-whitespace-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -311,7 +311,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#publication-identifier-001A-results">❐</a>
+          <a href="results.html#publication-identifier-001A-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -322,7 +322,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#publication-identifier-001B-results">❐</a>
+          <a href="results.html#publication-identifier-001B-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -333,7 +333,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#spine-order-001-results">❐</a>
+          <a href="results.html#spine-order-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -344,7 +344,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#unknown-collections-001-results">❐</a>
+          <a href="results.html#unknown-collections-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -355,7 +355,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#unknown-properties-001-results">❐</a>
+          <a href="results.html#unknown-properties-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -366,7 +366,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#unknown-properties-002-results">❐</a>
+          <a href="results.html#unknown-properties-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -377,7 +377,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#viewport-css-001-results">❐</a>
+          <a href="results.html#viewport-css-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -388,7 +388,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#xml-base-001-results">❐</a>
+          <a href="results.html#xml-base-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -399,7 +399,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#xml-external-entities-001-results">❐</a>
+          <a href="results.html#xml-external-entities-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -410,7 +410,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#xml-names-001-results">❐</a>
+          <a href="results.html#xml-names-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -421,7 +421,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#xml-non-validating-parser-001-results">❐</a>
+          <a href="results.html#xml-non-validating-parser-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -432,7 +432,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#xml-non-validating-parser-002-results">❐</a>
+          <a href="results.html#xml-non-validating-parser-002-results">❐</a>
         </td>
       </tr>
     </table>
@@ -465,7 +465,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-gif-results">❐</a>
+          <a href="results.html#cmt-gif-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -479,7 +479,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-jpeg-results">❐</a>
+          <a href="results.html#cmt-jpeg-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -493,7 +493,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-mp3-results">❐</a>
+          <a href="results.html#cmt-mp3-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -507,7 +507,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-mp4-aac-results">❐</a>
+          <a href="results.html#cmt-mp4-aac-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -521,7 +521,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-ogg-opus-results">❐</a>
+          <a href="results.html#cmt-ogg-opus-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -535,7 +535,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-png-results">❐</a>
+          <a href="results.html#cmt-png-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -549,7 +549,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-svg-results">❐</a>
+          <a href="results.html#cmt-svg-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -563,7 +563,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
-          <a href="index.html#cmt-webp-results">❐</a>
+          <a href="results.html#cmt-webp-results">❐</a>
         </td>
       </tr>
     </table>
@@ -596,7 +596,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-001-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -610,7 +610,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-002-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -624,7 +624,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-003-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-003-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -638,7 +638,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-004-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-004-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -652,7 +652,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-005-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-005-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -666,7 +666,7 @@
           <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
-          <a href="index.html#confreq-rs-pkg-dir_rtl-006-results">❐</a>
+          <a href="results.html#confreq-rs-pkg-dir_rtl-006-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -677,7 +677,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#package-creator-dir-rtl-001-results">❐</a>
+          <a href="results.html#package-creator-dir-rtl-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -688,7 +688,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#page-progression-001-results">❐</a>
+          <a href="results.html#page-progression-001-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -699,7 +699,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#page-progression-002-results">❐</a>
+          <a href="results.html#page-progression-002-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -710,7 +710,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#page-progression-003-results">❐</a>
+          <a href="results.html#page-progression-003-results">❐</a>
         </td>
       </tr>
       <tr>
@@ -721,7 +721,7 @@
         <td>(No description)</td>
         <td>n.a. </td>
         <td>
-          <a href="index.html#page-progression-004-results">❐</a>
+          <a href="results.html#page-progression-004-results">❐</a>
         </td>
       </tr>
     </table>
