The config approach and the "final" flag in place

--- a/docs/drafts/fragments/tests.html
+++ b/docs/drafts/fragments/tests.html
@@ -153,8 +153,8 @@
         <td>Support for Presentation MathML</td>
         <td>A Presentation MathML equation is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-mathml-rs-behavior">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-mathml-rs-render">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-mathml-rs-behavior">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-mathml-rs-render">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-mathml-rs-behavior-results">❐</a>
@@ -167,7 +167,7 @@
         <td>SVG content document</td>
         <td>An SVG image is displayed as a content document (not as part of an XHTML file).</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-svg">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-svg">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-epub3-svg-results">❐</a>
@@ -180,7 +180,7 @@
         <td>XHTML content document</td>
         <td>An XHTML file is displayed as a content document.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-xhtml">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-xhtml">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-epub3-xhtml-results">❐</a>
@@ -193,7 +193,7 @@
         <td>CSS applied to included SVG</td>
         <td>CSS changes the color of an SVG image that is embedded in the XHTML content by inclusion.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-svg-rs-css-embed-inc">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-svg-rs-css-embed-inc">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-svg-rs-css-embed-inc-results">❐</a>
@@ -206,7 +206,7 @@
         <td>CSS not applied to referenced SVG</td>
         <td>CSS does NOT change the color of an SVG image that is embedded in the XHTML content by reference.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-css-embed-ref">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-css-embed-ref">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-css-embed-ref-results">❐</a>
@@ -219,7 +219,7 @@
         <td>SVG embedded in XHTML content</td>
         <td>An SVG image is embedded in the XHTML content (as inline SVG).</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-svg-rs-embed">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-svg-rs-embed">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-svg-rs-embed-results">❐</a>
@@ -251,8 +251,8 @@
         <td>GIF image</td>
         <td>A GIF image is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-gif">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-gif">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-gif-results">❐</a>
@@ -265,8 +265,8 @@
         <td>JPEG image</td>
         <td>A JPEG image is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-jpeg">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-jpeg">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-jpeg-results">❐</a>
@@ -279,8 +279,8 @@
         <td>MP3 audio</td>
         <td>An MP3 audio file is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-mp3">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-mp3">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-mp3-results">❐</a>
@@ -293,8 +293,8 @@
         <td>MP4 audio</td>
         <td>An MP4 audio file is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-cmt-mp4-aac">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-cmt-mp4-aac">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-mp4-aac-results">❐</a>
@@ -307,8 +307,8 @@
         <td>OPUS audio</td>
         <td>An OPUS audio file is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-ogg-opus">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-mp3-aac">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-ogg-opus">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-mp3-aac">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-ogg-opus-results">❐</a>
@@ -321,8 +321,8 @@
         <td>PNG image</td>
         <td>A PNG image is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-png">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-png">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-png-results">❐</a>
@@ -335,8 +335,8 @@
         <td>SVG image</td>
         <td>An SVG image is displayed as part of the XHTML content (as a reference, not embedded).</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-svg">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-svg">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-svg-results">❐</a>
@@ -349,8 +349,8 @@
         <td>WEBP image</td>
         <td>A WEBP image is displayed as part of the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#cmt-webp">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-epub3-images">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#cmt-webp">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-epub3-images">(2) </a>
         </td>
         <td>
           <a href="results.html#cmt-webp-results">❐</a>
@@ -382,8 +382,8 @@
         <td>Correct 'dir=rtl' on the title</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The element's 'dir' attribute is set to 'rtl'; the title should display correctly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-001-results">❐</a>
@@ -396,8 +396,8 @@
         <td>No 'dir' on the title</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The element's 'dir' attribute is not set; the title should display incorrectly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-002-results">❐</a>
@@ -410,8 +410,8 @@
         <td>Incorrect 'dir=auto' on the title</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The element's 'dir' attribute is set to 'auto'; the title should display incorrectly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-003-results">❐</a>
@@ -424,8 +424,8 @@
         <td>Correct 'dir=rtl' on the package</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The root's 'dir' attribute is set to 'rtl'; the title should display correctly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-004-results">❐</a>
@@ -438,8 +438,8 @@
         <td>Correct 'dir=rtl' on the package, wrongly overwritten by 'dir=auto' on title</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The element's 'dir' attribute is set to 'auto', and the 'dir' attribute is set to 'rtl' on the package element; the title should display incorrectly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-005-results">❐</a>
@@ -452,8 +452,8 @@
         <td>'dir=ltr' on the package, correctly overwritten 'dir=rtl' on title</td>
         <td>The 'dc:title' element contains a text whose proper rendering requires bidi control. The element's 'dir' attribute is set to 'rtl' and the 'dir' attribute is set to 'ltr' on the 'package' element; the title should display correctly.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#attrdef-dir">(1) </a>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-base-dir">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#attrdef-dir">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-base-dir">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-pkg-dir_rtl-006-results">❐</a>
@@ -611,7 +611,7 @@
         <td>Package in Arbitrary Directory</td>
         <td>The EPUB document contains three valid package files and three corresponding sets of content documents, but only one of the packages, in an unusual subdirectory, is referenced by the container.xml file. The reading system must use this package.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#container-default-rendition">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#container-default-rendition">(1) </a>
         </td>
         <td>
           <a href="results.html#container-default-rendition_arbitrary-results">❐</a>
@@ -624,7 +624,7 @@
         <td>Multiple Packages in Container File</td>
         <td>The EPUB document contains three valid package files and three corresponding sets of content documents, all referenced by the container.xml file. The reading system must use the first package.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#container-default-rendition">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#container-default-rendition">(1) </a>
         </td>
         <td>
           <a href="results.html#container-default-rendition_multiple-results">❐</a>
@@ -656,7 +656,7 @@
         <td>Package version less than 3.0</td>
         <td>“Reading Systems MUST attempt to process an EPUB Publication whose Package Document version attribute is less than "3.0"”. This is an EPUB with package version attribute set to "0", to see if a reading system will open it.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-backward-epub">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-backward-epub">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-backward-epub-results">❐</a>
@@ -747,7 +747,7 @@
         <td>Non-Linear Spine Item is Reachable</td>
         <td>An itemref in the spine is marked as non-linear. Although it (possibly) cannot be accessed through the table of contents, it can be reached from a link in the XHTML content.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-33/#confreq-spine-nonlinear">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#confreq-spine-nonlinear">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-spine-nonlinear-results">❐</a>
@@ -760,7 +760,7 @@
         <td>Spine Items in Order</td>
         <td>Basic test of whether a reading system can display spine items in the correct order. The test is designed to fail if the reading system presents content in the order in which the file names sort, or if it presents files in manifest order rather than spine order.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#sec-pkg-doc-spine">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#sec-pkg-doc-spine">(1) </a>
         </td>
         <td>
           <a href="results.html#sec-pkg-doc-spine-results">❐</a>
@@ -805,8 +805,8 @@
         <td>Data URL does not open in top-level context</td>
         <td>XHTML content contains an img element where the src attribute is given as a data URL. RS must display the image rather than opening it in a new top-level browsing context.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-data-urls">(1) </a>
-          <a href="https://www.w3.org/TR/epub-33/#sec-data-urls">(2) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-data-urls">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#sec-data-urls">(2) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-data-urls-results">❐</a>
@@ -819,7 +819,7 @@
         <td>Manifest fallback with unsupported fallback</td>
         <td>This is a test of manifest fallbacks where both the spine item and the fallback are likely to be unsupported. The spine item is a DMG, with a fallback to a PSD file.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-foreign">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-foreign">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-foreign_bad-fallback-results">❐</a>
@@ -832,7 +832,7 @@
         <td>Manifest fallback with image</td>
         <td>An HTML content file contains a PSD image, with a manifest fallback to a PNG image. This tests fallbacks for resources that are not in the spine.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-foreign">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-foreign">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-foreign_image-results">❐</a>
@@ -845,7 +845,7 @@
         <td>Manifest fallback With JSON content document in spine</td>
         <td>This EPUB uses a JSON content file in the spine, with a manifest fallback to an HTML document. If the reading system does not support JSON, it should display the HTML.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-foreign">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-foreign">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-foreign_json-spine-results">❐</a>
@@ -858,7 +858,7 @@
         <td>Manifest fallback with XML in spine</td>
         <td>This EPUB uses an ordinary XML content file with mimetype application/xml in the spine, with a manifest fallback to an HTML document. If the reading system does not support XML, it should display the HTML.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-foreign">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-foreign">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-foreign_xml-spine-results">❐</a>
@@ -871,7 +871,7 @@
         <td>Manifest fallback with XML with suffix in spine</td>
         <td>This EPUB uses an custom XML content file with mimetype application/dtc+xml in the spine, with a manifest fallback to an HTML document. If the reading system does not support XML, it should display the HTML.</td>
         <td>
-          <a href="https://www.w3.org/TR/epub-rs-33/#confreq-rs-foreign">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-foreign">(1) </a>
         </td>
         <td>
           <a href="results.html#confreq-rs-foreign_xml-suffix-spine-results">❐</a>
