Added an error management to handle JSON mistakes in reports

--- a/docs/drafts/fragments/creators.html
+++ b/docs/drafts/fragments/creators.html
@@ -2,6 +2,6 @@
   <li>Dan Lazin</li>
   <li>Dave Cramer</li>
   <li>Ivan Herman</li>
-  <li>Matthew Chan</li>
+  <li>Matt Garrish</li>
   <li>Wendy Reid</li>
 </ul>
